objects/sf_devops__Work_Item_Merged_Change_Request__e.object
<CustomObject>
    <description>Event to notify when:
- change request was merged by Devops Center
- Devops Center detects that change request was merged externally</description>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <label>Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Stage_Id__c</fullName>
        <label>Source Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Stage_Id__c</fullName>
        <label>Target Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Work Item Merged Change Request</label>
    <pluralLabel>Work Item Merged Change Requests</pluralLabel>
</CustomObject>